--- a/temata/2. CSS - syntaxe, selektory, box model.md
+++ b/temata/2. CSS - syntaxe, selektory, box model.md
@@ -1,72 +1,198 @@
-2 - CSS - syntaxe, selektory, box model
-Cascading Style Sheets (CSS) je jazyk pro popis stylu HTML dokumentu – vzhled prvků na stránce. Umožňuje oddělit obsah (HTML) od prezentace (CSS).
+# 2 - CSS - syntaxe, selektory, box model
 
-SYNTAXE
-Základní syntaxe CSS se skládá ze selektoru a deklarací uvnitř složených závorek:
+## ÚVOD DO CSS
 
-h1 {
-  color: red;
-  font-size: 24px;
+Cascading Style Sheets (CSS) je deklarativní jazyk pro popis vzhledu HTML dokumentů. Název "Cascading" odkazuje na způsob, jakým se styly dědí a překrývají podle specifických pravidel.
+
+### Historie a verze CSS:
+- **CSS1** (1996) - základní styling
+- **CSS2** (1998) - positioning, media types
+- **CSS2.1** (2004) - opravy a vylepšení
+- **CSS3** (2009+) - modulární přístup, nové vlastnosti
+- **CSS4** - Living Standard (průběžné aktualizace)
+
+## SYNTAXE CSS
+
+### Základní struktura pravidla:
+```css
+selektor {
+  vlastnost: hodnota;
+  vlastnost: hodnota;
 }
+```
 
-Deklarace = vlastnost + hodnota, oddělená dvojtečkou. Každá deklarace končí středníkem.
+### Způsoby vkládání CSS:
 
-SELEKTORY
-Selektory vybírají HTML prvky, kterým se styl aplikuje. Základní typy:
+#### 1. Inline styly (nejvyšší priorita):
+```html
+<p style="color: red; font-size: 16px;">Text</p>
+```
 
-Element selektor: p, h1
+#### 2. Internal CSS (v hlavičce HTML):
+```html
+<head>
+  <style>
+    p { color: blue; }
+  </style>
+</head>
+```
 
-Třída: .moje-trida – aplikuje styl na všechny prvky s touto třídou
+#### 3. External CSS (externí soubor):
+```html
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+```
 
-ID: #moje-id – vybírá prvek s konkrétním ID (na stránce může být jen jeden)
+#### 4. Import CSS:
+```css
+@import url('fonts.css');
+@import url('layout.css');
+```
 
-Kombinátory: potomci, sousedé (div p, div > p, div + p, div ~ p)
+### CSS komentáře:
+```css
+/* Jednořádkový komentář */
 
-Pseudo-třídy: :hover, :first-child, :nth-child(2n)
+/*
+  Víceřádkový
+  komentář
+*/
+```
 
-Pseudo-elementy: ::before, ::after
+## SELEKTORY
 
-Specifičnost selektorů určuje, který styl bude použit, pokud se selektory střetnou:
+### Základní selektory:
 
-Inline styl > ID > třída > element
+#### 1. Element (Type) selector:
+```css
+h1 { color: blue; }
+p { margin: 10px; }
+```
 
-BOX MODEL
-Každý HTML element je box, jehož struktura definuje:
+#### 2. Class selector (.).
+```css
+.highlight { background: yellow; }
+.btn-primary { color: white; }
 
-Content – skutečný obsah (text, obrázek...)
+/* Více tříd současně */
+.btn.primary.large { /* ... */ }
+```
 
-Padding – vnitřní odsazení mezi obsahem a rámečkem
+#### 3. ID selector (#):
+```css
+#header { position: fixed; }
+#main-content { width: 80%; }
+```
 
-Border – okraj kolem obsahu (může mít barvu, šířku, styl)
+#### 4. Universal selector (*):
+```css
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+```
 
-Margin – vnější odsazení od okolních prvků
+## BOX MODEL
 
-Např.:
+### Standardní box model:
+```
+┌─────────────────────────────────────┐
+│              MARGIN                 │
+│  ┌───────────────────────────────┐  │
+│  │           BORDER              │  │
+│  │  ┌─────────────────────────┐  │  │
+│  │  │        PADDING          │  │  │
+│  │  │  ┌───────────────────┐  │  │  │
+│  │  │  │     CONTENT       │  │  │  │
+│  │  │  └───────────────────┘  │  │  │
+│  │  └─────────────────────────┘  │  │
+│  └───────────────────────────────┘  │
+└─────────────────────────────────────┘
+```
 
-div {
+### Vlastnosti box modelu:
+
+#### Content (obsah):
+```css
+.box {
   width: 200px;
-  padding: 10px;
+  height: 100px;
+  min-width: 150px;
+  max-width: 300px;
+  min-height: 50px;
+  max-height: 200px;
+}
+```
+
+#### Padding (vnitřní odsazení):
+```css
+.box {
+  padding: 10px 20px 15px 5px; /* top | right | bottom | left */
+  
+  /* Jednotlivé strany */
+  padding-top: 10px;
+  padding-right: 20px;
+  padding-bottom: 15px;
+  padding-left: 5px;
+}
+```
+
+#### Border (okraj):
+```css
+.box {
+  /* Zkrácený zápis */
+  border: 2px solid blue;
+  
+  /* Jednotlivé vlastnosti */
+  border-width: 2px;
+  border-style: solid; /* solid, dashed, dotted, double, groove, ridge, inset, outset */
+  border-color: blue;
+  
+  /* Jednotlivé strany */
+  border-top: 1px solid red;
+  border-right: 2px dashed green;
+  border-bottom: 3px dotted blue;
+  border-left: 4px double orange;
+  
+  /* Zaoblené rohy */
+  border-radius: 10px 20px 30px 40px; /* jednotlivé rohy */
+}
+```
+
+#### Margin (vnější odsazení):
+```css
+.box {
+  margin: 10px 20px 30px 40px; /* top | right | bottom | left */
+  
+  /* Automatické centrování */
+  margin: 0 auto; /* horizontální centrování blokového elementu */
+}
+```
+
+### Box-sizing:
+```css
+/* Standardní model (default) */
+.standard {
+  box-sizing: content-box;
+  width: 200px;
+  padding: 20px;
   border: 5px solid black;
-  margin: 20px;
+  /* Celková šířka: 200 + 40 + 10 = 250px */
 }
 
-Celková šířka boxu: 200 + 10*2 + 5*2 + 20*2 = 270px
-
-Box-sizing:
-
-content-box (výchozí): šířka se týká pouze content
-
-border-box: šířka zahrnuje i padding a border
-
-DĚDIČNOST A CASCADING
-
-Vlastnosti se mohou dědit (např. font-family, color), jiné ne (např. margin)
-
-Stylová pravidla se aplikují podle kaskádového principu: pravidla později uvedená mají vyšší prioritu, pokud mají stejnou specifičnost
-
-MEDIA QUERIES
-Umožňují stylování podle typu zařízení nebo šířky obrazovky:
-
-@media (max-width: 768px) {
-  body { font-size: 14px; }
+/* Alternativní model */
+.alternative {
+  box-sizing: border-box;
+  width: 200px;
+  padding: 20px;
+  border: 5px solid black;
+  /* Celková šířka: 200px (padding a border se vejdou dovnitř) */
 }
+
+/* Globální nastavení */
+* {
+  box-sizing: border-box;
+}
+```
