--- a/temata/3. CSS framework - Bootstrap a další technologie.md
+++ b/temata/3. CSS framework - Bootstrap a další technologie.md
@@ -1,79 +1,79 @@
 3 - CSS framework - Bootstrap a další technologie
 CSS framework je sada nástrojů (soubory CSS, případně JavaScript), která usnadňuje a zrychluje návrh webového rozhraní. Frameworky poskytují předdefinované třídy a komponenty pro běžné prvky jako tlačítka, formuláře, layouty apod.
 
-BOOTSTRAP
+## BOOTSTRAP
 Bootstrap je nejrozšířenější open-source CSS framework vyvinutý vývojáři z Twitteru. Obsahuje:
 
-1. Grid systém:
+### 1. Grid systém:
 
 * 12-sloupcový systém pro responzivní layout
 * Flexbox-based od verze 4
 * Přizpůsobení velikosti pro různé obrazovky pomocí breakpointů (`.col-md-6`, `.col-lg-4`)
 
-2. Komponenty:
+### 2. Komponenty:
 
 * Tlačítka, alerty, karty, navigace, modální okna, formuláře
 * Používají se předdefinované třídy, např. `btn btn-primary`, `form-control`
 
-3. Utilities:
+### 3. Utilities:
 
 * Rychlé úpravy: barva (`text-danger`), padding (`p-3`), zarovnání (`text-center`)
 
-4. JavaScript pluginy:
+### 4. JavaScript pluginy:
 
 * Bootstrap obsahuje vlastní JS komponenty (dropdown, carousel, modal)
 * Fungují s jQuery (u starších verzí) nebo čistým JS (od v5)
 
-Výhody:
+#### Výhody:
 
 * Rychlý vývoj bez psaní vlastního CSS
 * Responzivita out-of-the-box
 * Vysoká kompatibilita mezi prohlížeči
 * Široká komunita a dokumentace
 
-Nevýhody:
+#### Nevýhody:
 
 * Výsledné stránky mohou působit uniformně
 * Příliš mnoho nepoužitého kódu (řeší se např. pomocí purgecss)
 * Potřeba přepisování stylů pro vlastní design
 
-TAILWIND CSS
+## TAILWIND CSS
 Tailwind je utility-first CSS framework:
 
 * Neposkytuje komponenty, ale třídy pro stylování (`text-lg`, `bg-blue-500`, `hover:underline`)
 * Vysoká flexibilita a přehlednost v HTML
 * Vhodné pro vývojáře, kteří chtějí mít kontrolu nad vzhledem
 
-Výhody:
+#### Výhody:
 
 * Všechny styly přímo v HTML
 * Snadná tvorba vlastního designu
 * Malá velikost výsledného CSS (po purge)
 
-Nevýhody:
+#### Nevýhody:
 
 * Může být méně čitelný pro neznalé
 * HTML bývá delší a plné tříd
 
-DALŠÍ FRAMEWORKY
+## DALŠÍ FRAMEWORKY
 
-1. Bulma:
+### 1. Bulma:
 
 * Moderní, čistý vzhled
 * Používá flexbox
 * Bez JS části – pouze CSS
 
-2. Foundation (Zurb):
+### 2. Foundation (Zurb):
 
 * Pokročilé možnosti přizpůsobení
 * Menší komunita
 
-3. Materialize:
+### 3. Materialize:
 
 * Vzhled podle Material Design (Google)
 * Komponenty + animace
 
-SROVNÁNÍ:
+## SROVNÁNÍ:
 
 | Framework | Stylování | Komponenty | JS podpora | Přizpůsobení |
 | --------- | --------- | ---------- | ---------- | ------------ |
@@ -81,7 +81,7 @@ SROVNÁNÍ:
 | Tailwind  | Utility   | Ne         | Ne         | Výborné      |
 | Bulma     | Třídy     | Částečně   | Ne         | Dobré        |
 
-Použití v praxi:
+## Použití v praxi:
 
 * Pro rychlé prototypování a konzistentní vzhled: Bootstrap
 * Pro vlastní design a moderní vývoj: Tailwind
