changes here and there

--- a/temata/03. CSS framework - Bootstrap a další technologie.md
+++ b/temata/03. CSS framework - Bootstrap a další technologie.md
@@ -1,4 +1,4 @@
-3 - CSS framework - Bootstrap a další technologie
+# 3 - CSS framework - Bootstrap a další technologie
 CSS framework je sada nástrojů (soubory CSS, případně JavaScript), která usnadňuje a zrychluje návrh webového rozhraní. Frameworky poskytují předdefinované třídy a komponenty pro běžné prvky jako tlačítka, formuláře, layouty apod.
 
 ## BOOTSTRAP
