--- a/temata/06. HTML - struktura HTML dokumentu, formuláře, multimédia.md
+++ b/temata/06. HTML - struktura HTML dokumentu, formuláře, multimédia.md
@@ -1,4 +1,4 @@
-6 - HTML – struktura HTML dokumentu, formuláře, multimédia
+# 6 - HTML – struktura HTML dokumentu, formuláře, multimédia
 HTML (HyperText Markup Language) je základní značkovací jazyk pro tvorbu webových stránek. Určuje strukturu a význam obsahu webu.
 
 STRUKTURA HTML DOKUMENTU
