--- a/temata/07. HTML layout - rozložení stránky, techniky tvorby.md
+++ b/temata/07. HTML layout - rozložení stránky, techniky tvorby.md
@@ -1,4 +1,4 @@
-7 - HTML layout – rozložení stránky, techniky tvorby
+# 7 - HTML layout – rozložení stránky, techniky tvorby
 HTML layout je způsob, jakým jsou jednotlivé prvky na webové stránce uspořádány. Cílem je vytvořit přehledné, responzivní a esteticky příjemné rozhraní pro uživatele.
 
 ZÁKLADNÍ STRUKTURA STRÁNKY
