--- a/temata/08. HTTP protokol - stavové kódy, autentizace, verze, HTTPS a SSL.md
+++ b/temata/08. HTTP protokol - stavové kódy, autentizace, verze, HTTPS a SSL.md
@@ -1,4 +1,4 @@
-8 - JavaScript – syntaxe, datové typy, funkce, promise
+# 8 - JavaScript – syntaxe, datové typy, funkce, promise
 JavaScript (JS) je skriptovací jazyk běžící v prohlížeči (a na serveru s Node.js), který umožňuje interaktivitu na webových stránkách. Je to jeden z hlavních pilířů moderního webu (spolu s HTML a CSS).
 
 SYNTAXE
