--- a/temata/09. JavaScript - FetchAPI, WebSocket.md
+++ b/temata/09. JavaScript - FetchAPI, WebSocket.md
@@ -1,4 +1,4 @@
-9 - JavaScript – objektové programování
+# 9 - JavaScript – objektové programování
 Objektové programování v JavaScriptu (OOP) je styl programování, kde jsou data a funkcionalita sdruženy do objektů. JavaScript podporuje OOP skrze prototypy i třídy (od ES6).
 
 ZÁKLADY OBJEKTŮ
