--- a/temata/10. JavaScript - objektové programování.md
+++ b/temata/10. JavaScript - objektové programování.md
@@ -1,4 +1,4 @@
-10 - JavaScript – Fetch API, WebSocket
+# 10 - JavaScript – Fetch API, WebSocket
 Téma se zaměřuje na dva moderní způsoby komunikace mezi klientem (prohlížečem) a serverem: Fetch API a WebSocket. Oba umožňují načítání nebo výměnu dat bez nutnosti obnovení stránky, ale liší se svou povahou a použitím.
 
 FETCH API
