--- a/temata/11. JavaScript - syntaxe, datové typy, funkce, promise.md
+++ b/temata/11. JavaScript - syntaxe, datové typy, funkce, promise.md
@@ -1,4 +1,4 @@
-11 - Node.js – syntaxe, cesty, zpracování požadavků
+# 11 - Node.js – syntaxe, cesty, zpracování požadavků
 Node.js je JavaScriptový runtime postavený na V8 enginu od Googlu. Umožňuje spouštět JavaScript mimo prohlížeč – typicky na serveru. Je oblíbený pro tvorbu REST API, websocketových serverů a nástrojů příkazové řádky.
 
 ZÁKLADY NODE.JS
