--- a/temata/12. Nasazení webu - výběr technologie pro provoz, nasazení webu do provozu.md
+++ b/temata/12. Nasazení webu - výběr technologie pro provoz, nasazení webu do provozu.md
@@ -1,4 +1,4 @@
-12 - Nasazení webu – výběr technologie pro provoz, nasazení webu do provozu
+# 12 - Nasazení webu – výběr technologie pro provoz, nasazení webu do provozu
 Nasazení webu je proces, kdy vývojová verze webové aplikace je přenesena a zpřístupněna uživatelům prostřednictvím internetu. Správné nasazení zahrnuje výběr vhodného hostingu, zabezpečení, doménu, a případně automatizaci pomocí CI/CD.
 
 KROKY NASAZENÍ
