--- a/temata/14. Optimalizace webu - cache, CDN, načítání webu.md
+++ b/temata/14. Optimalizace webu - cache, CDN, načítání webu.md
@@ -1,4 +1,4 @@
-14 - Optimalizace webu – cache, CDN, načítání webu
+# 14 - Optimalizace webu – cache, CDN, načítání webu
 Optimalizace webu znamená zajištění co nejrychlejšího a nejefektivnějšího načítání a fungování webových stránek. Cílem je zlepšit uživatelský zážitek, snížit zátěž serveru a zvýšit SEO skóre.
 
 CACHE (MEZIPAMĚŤ)
