--- a/temata/15. React.md
+++ b/temata/15. React.md
@@ -1,4 +1,4 @@
-15 - React
+# 15 - React
 React je JavaScriptová knihovna vyvinutá Facebookem pro tvorbu uživatelských rozhraní. Je zaměřená na komponentový přístup a efektivní vykreslování pomocí virtuálního DOM.
 
 ZÁKLADNÍ VLASTNOSTI
