--- a/temata/16. Responzivita a přístupnost.md
+++ b/temata/16. Responzivita a přístupnost.md
@@ -1,4 +1,4 @@
-16 - Responzivita a přístupnost
+# 16 - Responzivita a přístupnost
 RESPONZIVITA (Responsive Design)
 Cílem responzivního designu je zajistit, aby webová stránka byla čitelná a použitelná na všech typech zařízení (mobil, tablet, desktop).
 
