--- a/temata/17. REST - cesty, CRUD, HATEOAS.md
+++ b/temata/17. REST - cesty, CRUD, HATEOAS.md
@@ -1,4 +1,4 @@
-17 - REST – cesty, CRUD, HATEOAS
+# 17 - REST – cesty, CRUD, HATEOAS
 REST (Representational State Transfer) je architektonický styl pro návrh webových služeb. REST API umožňuje komunikaci mezi klientem a serverem pomocí standardních HTTP metod.
 
 ZÁKLADNÍ PRINCIPY REST
