--- a/temata/18. Webové aplikace - autentizace a autorizace.md
+++ b/temata/18. Webové aplikace - autentizace a autorizace.md
@@ -1,4 +1,4 @@
-18 - Webové aplikace – autentizace a autorizace
+# 18 - Webové aplikace – autentizace a autorizace
 Autentizace a autorizace jsou klíčové prvky zabezpečení webových aplikací. Zajišťují, že ke konkrétním částem systému přistupují pouze oprávnění uživatelé.
 
 AUTENTIZACE (authentication)
