--- a/temata/19. Webové aplikace - výběr technologií.md
+++ b/temata/19. Webové aplikace - výběr technologií.md
@@ -1,4 +1,4 @@
-19 - Webové aplikace – výběr technologií
+# 19 - Webové aplikace – výběr technologií
 Výběr technologií pro vývoj webové aplikace závisí na několika faktorech, jako je velikost týmu, požadavky projektu, rozpočet, škálovatelnost a zkušenosti vývojářů.
 
 ZÁKLADNÍ SLOŽKY WEBOVÉ APLIKACE
