--- a/temata/20. Webové aplikace - vývoj webu.md
+++ b/temata/20. Webové aplikace - vývoj webu.md
@@ -1,4 +1,4 @@
-20 - Webové aplikace – vývoj webu
+# 20 - Webové aplikace – vývoj webu
 Vývoj webové aplikace je proces, který začíná analýzou a návrhem a pokračuje implementací, testováním, nasazením a údržbou.
 
 ETAPY VÝVOJE WEBOVÉ APLIKACE
