--- a/temata/21. Webové technologie v kontextu vývoje společnosti - přínosy, rizika a dopady, predikce budoucího vývoje.md
+++ b/temata/21. Webové technologie v kontextu vývoje společnosti - přínosy, rizika a dopady, predikce budoucího vývoje.md
@@ -1,4 +1,4 @@
-21 - Webové technologie v kontextu vývoje společnosti – přínosy, rizika a dopady, predikce budoucího vývoje
+# 21 - Webové technologie v kontextu vývoje společnosti – přínosy, rizika a dopady, predikce budoucího vývoje
 Webové technologie zásadně ovlivnily způsob, jakým lidé komunikují, pracují, nakupují a vzdělávají se. Vývoj internetu a webových aplikací má rozsáhlý dopad na společnost, ekonomiku i kulturu.
 
 PŘÍNOSY
