--- a/temata/22. Webový klient - konfigurace, DOM, BOM.md
+++ b/temata/22. Webový klient - konfigurace, DOM, BOM.md
@@ -1,4 +1,4 @@
-22 - Webový klient – konfigurace, DOM, BOM
+# 22 - Webový klient – konfigurace, DOM, BOM
 Webový klient je software (typicky webový prohlížeč), který odesílá požadavky na webový server a zobrazuje uživateli výsledný obsah. Základem pro fungování webových aplikací v prohlížeči jsou objekty DOM a BOM.
 
 KONFIGURACE WEBOVÉHO KLIENTA
