--- a/temata/23. Webový server - konfigurace, cachování.md
+++ b/temata/23. Webový server - konfigurace, cachování.md
@@ -1,4 +1,4 @@
-23 - Webový server – konfigurace, cachování
+# 23 - Webový server – konfigurace, cachování
 Webový server je software (např. Apache, Nginx), který přijímá požadavky od klientů (prohlížečů) a vrací odpovědi, typicky HTML stránky, CSS, JS, nebo API data. Je základem každé webové aplikace běžící na serveru.
 
 KONFIGURACE WEBOVÉHO SERVERU
