--- a/temata/24. Webový server - logování, zabezpečení, monitoring.md
+++ b/temata/24. Webový server - logování, zabezpečení, monitoring.md
@@ -1,4 +1,4 @@
-24 - Webový server – logování, zabezpečení, monitoring
+# 24 - Webový server – logování, zabezpečení, monitoring
 Webový server musí být nejen funkční a rychlý, ale také bezpečný a monitorovaný. Správné logování, zabezpečení a dohled pomáhají detekovat útoky, ladit chyby a zajistit dostupnost aplikace.
 
 LOGOVÁNÍ (LOGGING)
