--- a/temata/08. HTTP protokol - stavové kódy, autentizace, verze, HTTPS a SSL.md
+++ b/temata/08. HTTP protokol - stavové kódy, autentizace, verze, HTTPS a SSL.md
@@ -1,119 +1,95 @@
-# 8 - JavaScript – syntaxe, datové typy, funkce, promise
-JavaScript (JS) je skriptovací jazyk běžící v prohlížeči (a na serveru s Node.js), který umožňuje interaktivitu na webových stránkách. Je to jeden z hlavních pilířů moderního webu (spolu s HTML a CSS).
+Tady máš přehledně a srozumitelně vypracované maturitní téma **„HTTP protokol – stavové kódy, autentizace, verze, HTTPS a SSL“** vhodné pro **ústní zkoušku**, formátováno v **Markdownu**.
 
-SYNTAXE
+---
 
-* Nezávislá na platformě, dynamicky typovaný jazyk
-* Bloky kódu ohraničeny `{}`
-* Ukončení příkazů středníkem (není povinné, ale doporučené)
-* Velmi důležitá je práce s asynchronními funkcemi, volání API a manipulace s DOM
+# 🌐 HTTP protokol – stavové kódy, autentizace, verze, HTTPS a SSL
 
-Příklady syntaxe:
+## 🧠 Co je HTTP?
 
-```javascript
-let x = 10;
-const y = "Ahoj";
+* **HTTP (HyperText Transfer Protocol)** je základní protokol pro **komunikaci mezi klientem a serverem** na webu.
+* Používá se pro **přenos dat** (např. HTML, obrázků, JSON).
+* Je to **bezstavový** protokol – server si **nepamatuje předchozí požadavky** od klienta.
 
-if (x > 5) {
-  console.log("x je větší než 5");
-}
-```
+---
 
-DEKLARACE PROMĚNNÝCH
+## 🧾 Základní struktura HTTP požadavku a odpovědi
 
-* `var` – starší, má funkční rozsah
-* `let` – novější, blokový rozsah
-* `const` – neměnná hodnota, také blokový rozsah
+* **Požadavek** (od klienta):
 
-DATOVÉ TYPY
+  * Metoda (GET, POST, PUT, DELETE…)
+  * URL (např. `/produkty`)
+  * Hlavičky (např. `User-Agent`, `Authorization`)
+  * Tělo (např. u POST požadavků)
 
-1. Primitivní typy:
+* **Odpověď** (od serveru):
 
-* `string` – text: "Ahoj"
-* `number` – čísla: 42, 3.14
-* `boolean` – true/false
-* `undefined` – nezadaná hodnota
-* `null` – prázdná hodnota
-* `symbol`, `bigint` – speciální typy
+  * Stavový kód (např. `200 OK`, `404 Not Found`)
+  * Hlavičky (např. `Content-Type`)
+  * Tělo odpovědi (např. HTML nebo JSON)
 
-2. Složené typy:
+---
 
-* `object` – složené struktury (např. `{ jmeno: "Jan" }`)
-* `array` – pole `[1, 2, 3]`
-* `function` – funkce jsou objekt
+## 📶 Verze HTTP
 
-FUNKCE
-Funkce jsou základní stavební kámen JS. Mohou být:
+| Verze        | Popis                                                     |
+| ------------ | --------------------------------------------------------- |
+| **HTTP/1.0** | První verze, každá komunikace = nové spojení              |
+| **HTTP/1.1** | Umožňuje udržet **persistentní spojení** a zlepšuje výkon |
+| **HTTP/2**   | Binární protokol, **multiplexování**, rychlejší           |
+| **HTTP/3**   | Používá **QUIC** místo TCP, ještě rychlejší               |
 
-* Deklarované:
+---
 
-```javascript
-function pozdrav(jmeno) {
-  return "Ahoj " + jmeno;
-}
-```
+## 📟 Stavové kódy
 
-* Anonymní (např. v proměnné):
+HTTP odpovědi obsahují **čísla**, která označují výsledek požadavku:
 
-```javascript
-const pozdrav = function(jmeno) {
-  return `Ahoj ${jmeno}`;
-};
-```
+| Kategorie | Význam        | Příklady                                               |
+| --------- | ------------- | ------------------------------------------------------ |
+| **1xx**   | Informativní  | `100 Continue`                                         |
+| **2xx**   | Úspěch        | `200 OK`, `201 Created`                                |
+| **3xx**   | Přesměrování  | `301 Moved Permanently`, `302 Found`                   |
+| **4xx**   | Chyba klienta | `400 Bad Request`, `401 Unauthorized`, `404 Not Found` |
+| **5xx**   | Chyba serveru | `500 Internal Server Error`, `503 Service Unavailable` |
 
-* Arrow funkce:
+---
 
-```javascript
-const pozdrav = (jmeno) => `Ahoj ${jmeno}`;
-```
+## 🔐 Autentizace v HTTP
 
-Funkce mohou přijímat parametry, vracet hodnoty, mít výchozí hodnoty a také být uvnitř jiných funkcí (closures).
+* Autentizace = ověření totožnosti uživatele
+* Protokol HTTP sám o sobě **neposkytuje bezpečné ověření**, ale umožňuje přenos údajů.
 
-ROZSAH (SCOPE)
+### Způsoby autentizace:
 
-* Globální: dostupný všude
-* Lokální: dostupný jen uvnitř funkce nebo bloku (`let`, `const`)
+| Typ                | Popis                                                                   |
+| ------------------ | ----------------------------------------------------------------------- |
+| **Basic Auth**     | Uživatelské jméno a heslo zakódované v base64 (nezabezpečené bez HTTPS) |
+| **Token (Bearer)** | Např. **JWT token** v hlavičce `Authorization: Bearer <token>`          |
+| **Cookie-based**   | Po přihlášení server uloží ID relace do cookie                          |
+| **OAuth 2.0**      | Bezpečný způsob ověření přes externí služby (Google, Facebook atd.)     |
 
-HOISTING
+---
 
-* Proměnné a funkce deklarované pomocí `var` nebo `function` jsou „vytahovány“ nahoru.
+## 🔒 HTTPS a SSL/TLS
 
-ASYNCHRONNÍ PROGRAMOVÁNÍ
-JavaScript je jednovláknový, ale umí pracovat asynchronně (např. volání API, čekání na odezvu).
+* **HTTPS** = **HTTP + šifrování pomocí SSL/TLS**
+* Zajišťuje **šifrovanou, bezpečnou komunikaci** mezi klientem a serverem.
+* Ochrana proti odposlechu, podvržení a útokům typu „Man-in-the-Middle“.
 
-PROMISE
-Promise je objekt, který reprezentuje budoucí výsledek asynchronní operace.
+### Pojmy:
 
-Tři stavy:
+* **SSL (Secure Sockets Layer)** – původní protokol, dnes zastaralý.
+* **TLS (Transport Layer Security)** – nástupce SSL, **aktuální standard**.
+* **Certifikát** – vydán certifikační autoritou (např. Let's Encrypt) a potvrzuje pravost serveru.
 
-* pending – čekající
-* fulfilled – úspěšně splněno
-* rejected – odmítnuto (chyba)
+---
 
-Příklad:
+## 📄 Shrnutí
 
-```javascript
-let p = new Promise((resolve, reject) => {
-  setTimeout(() => resolve("Hotovo"), 1000);
-});
-
-p.then(data => console.log(data)).catch(err => console.error(err));
-```
-
-ASYNC / AWAIT
-Moderní způsob zápisu asynchronního kódu:
-
-```javascript
-async function nactiData() {
-  try {
-    let odpoved = await fetch("/api/data");
-    let data = await odpoved.json();
-    console.log(data);
-  } catch (chyba) {
-    console.error(chyba);
-  }
-}
-```
-
-ZÁVĚR
-JavaScript je klíčový jazyk pro vývoj webových aplikací. Znalost jeho syntaxe, práce s funkcemi a porozumění asynchronnímu chování (promise, async/await) je nezbytná pro každého frontend i fullstack vývojáře.
+| Téma             | Vysvětlení                                                |
+| ---------------- | --------------------------------------------------------- |
+| **HTTP**         | Protokol pro přenos dat na webu                           |
+| **Verze**        | HTTP/1.0 → 1.1 → 2 → 3 (výkon, multiplexování, šifrování) |
+| **Stavové kódy** | Odpověď serveru (200 OK, 404 Not Found…)                  |
+| **Autentizace**  | Způsoby ověření uživatele (Basic, Token, Cookie, OAuth)   |
+| **HTTPS**        | Zabezpečený HTTP pomocí TLS šifrování                     |
