--- a/temata/10. JavaScript - objektové programování.md
+++ b/temata/10. JavaScript - objektové programování.md
@@ -1,117 +1,121 @@
-# 10 - JavaScript – Fetch API, WebSocket
-Téma se zaměřuje na dva moderní způsoby komunikace mezi klientem (prohlížečem) a serverem: Fetch API a WebSocket. Oba umožňují načítání nebo výměnu dat bez nutnosti obnovení stránky, ale liší se svou povahou a použitím.
+# 10 - JavaScript – objektové programování
+Objektové programování v JavaScriptu (OOP) je styl programování, kde jsou data a funkcionalita sdruženy do objektů. JavaScript podporuje OOP skrze prototypy i třídy (od ES6).
 
-FETCH API
-Moderní náhrada za XMLHttpRequest (XHR), slouží k odesílání HTTP požadavků (GET, POST, PUT, DELETE atd.)
-
-Základní použití:
+ZÁKLADY OBJEKTŮ
+Objekty jsou kolekce klíč-hodnota:
 
 ```javascript
-fetch("https://api.example.com/data")
-  .then(response => response.json())
-  .then(data => console.log(data))
-  .catch(error => console.error("Chyba:", error));
+const osoba = {
+  jmeno: "Jan",
+  vek: 30,
+  pozdrav: function() {
+    return `Ahoj, já jsem ${this.jmeno}`;
+  }
+};
 ```
 
-POST požadavek:
+Vlastnosti:
+
+* Klíče jsou řetězce (nebo symboly)
+* Hodnotou může být cokoliv – číslo, pole, objekt, funkce
+* Přístup: `osoba.jmeno` nebo `osoba["vek"]`
+
+VYTVOŘENÍ OBJEKTŮ
+
+1. Objektový literál (viz výše)
+2. Konstruktorové funkce:
 
 ```javascript
-fetch("/api/pridat", {
-  method: "POST",
-  headers: {
-    "Content-Type": "application/json"
-  },
-  body: JSON.stringify({ jmeno: "Jan" })
-})
-.then(res => res.json())
-.then(data => console.log(data));
+function Auto(znacka, rok) {
+  this.znacka = znacka;
+  this.rok = rok;
+}
+const mojeAuto = new Auto("Škoda", 2020);
 ```
 
-Možnosti konfigurace:
-
-* `method`: typ HTTP požadavku
-* `headers`: HTTP hlavičky
-* `body`: odesílaná data
-* `credentials`: zda posílat cookies (`same-origin`, `include`)
-
-Výhody Fetch API:
-
-* Čistá, moderní syntaxe založená na Promise
-* Podpora všech HTTP metod
-* Funguje v moderních prohlížečích
-
-Nevýhody:
-
-* Nemá automatické timeouty
-* Nutné ručně ošetřit síťové chyby a odpovědi
-
-ASYNC/WAIT A FETCH
+3. Třídy (ES6 syntaxe):
 
 ```javascript
-async function nactiUzivatele() {
-  try {
-    let odpoved = await fetch("/uzivatel/1");
-    if (!odpoved.ok) throw new Error("Chyba načítání");
-    let data = await odpoved.json();
-    console.log(data);
-  } catch (err) {
-    console.error(err);
+class Zvire {
+  constructor(jmeno) {
+    this.jmeno = jmeno;
+  }
+  zvuk() {
+    console.log(`${this.jmeno} vydává zvuk.`);
+  }
+}
+const pes = new Zvire("Rex");
+pes.zvuk();
+```
+
+DĚDIČNOST (INHERITANCE)
+
+1. Pomocí prototypu:
+
+```javascript
+Auto.prototype.info = function() {
+  return `${this.znacka} z roku ${this.rok}`;
+};
+```
+
+2. Pomocí tříd:
+
+```javascript
+class Pes extends Zvire {
+  zvuk() {
+    console.log(`${this.jmeno} štěká.`);
+  }
+}
+const alik = new Pes("Alík");
+alik.zvuk(); // Alík štěká.
+```
+
+`super()` – volání konstruktoru rodiče:
+
+```javascript
+constructor(jmeno, rasa) {
+  super(jmeno);
+  this.rasa = rasa;
+}
+```
+
+ENCAPSULACE (zapouzdření)
+
+* OOP umožňuje skrýt vnitřní detaily implementace:
+* Pomocí privátních proměnných (nově `#promenna`)
+
+```javascript
+class BankovniUcet {
+  #zustatek = 0;
+  constructor(majitel) {
+    this.majitel = majitel;
+  }
+  vloz(castka) {
+    if (castka > 0) this.#zustatek += castka;
+  }
+  zobrazZustatek() {
+    return this.#zustatek;
   }
 }
 ```
 
-Využití:
+POLYMORFISMUS
 
-* Načítání obsahu webu
-* Odesílání formulářů
-* Komunikace s REST API
-
-WEBSOCKET
-Protokol WebSocket umožňuje trvalé, obousměrné spojení mezi klientem a serverem. Vhodné pro aplikace, kde se často mění data (chaty, online hry, tržní data).
-
-Založený na TCP, ne HTTP. Na začátku handshake přes HTTP, poté trvalé spojení.
-
-Příklad:
+* Schopnost objektů mít stejné metody, ale různé chování:
 
 ```javascript
-const socket = new WebSocket("wss://example.com/socket");
-
-socket.onopen = () => {
-  console.log("Spojení navázáno");
-  socket.send("Zpráva serveru");
-};
-
-socket.onmessage = (event) => {
-  console.log("Zpráva od serveru:", event.data);
-};
-
-socket.onclose = () => {
-  console.log("Spojení uzavřeno");
-};
+const zvirata = [new Pes("Azor"), new Zvire("Lev")];
+zvirata.forEach(z => z.zvuk());
 ```
 
-Události:
+ABSTRAKCE
 
-* `onopen` – spojení navázáno
-* `onmessage` – přijata zpráva
-* `onerror` – chyba ve spojení
-* `onclose` – spojení uzavřeno
+* Odhalujeme jen potřebné části, detaily skrýváme (např. API)
 
-Výhody:
+PROTOTYPOVÝ ŘETĚZEC
 
-* Nízká latence
-* Umožňuje real-time přenos dat
-* Trvalé připojení bez nutnosti opakovaných požadavků
-
-Nevýhody:
-
-* Složitější správa spojení a stavů
-* Není vhodné pro každou aplikaci
-
-KDY POUŽÍT
-
-* Fetch API: jednorázové požadavky (formuláře, API volání)
-* WebSocket: trvalé připojení (chat, notifikace, online hry)
+* V JS každý objekt má interní prototyp (`__proto__`), pomocí něhož dědí vlastnosti
+* Řetězec končí u `Object.prototype`
 
 ZÁVĚR
-Fetch API je moderní způsob komunikace přes HTTP, zatímco WebSocket umožňuje obousměrný datový tok v reálném čase. Obě technologie mají své využití v moderním webovém vývoji.
+Objektové programování v JS přináší strukturu a znovupoužitelnost. Díky ES6 třídám je přehlednější, ale stále funguje na základě prototypového dědičného modelu.
