--- a/temata/11. JavaScript - syntaxe, datové typy, funkce, promise.md
+++ b/temata/11. JavaScript - syntaxe, datové typy, funkce, promise.md
@@ -1,106 +1,119 @@
-# 11 - Node.js – syntaxe, cesty, zpracování požadavků
-Node.js je JavaScriptový runtime postavený na V8 enginu od Googlu. Umožňuje spouštět JavaScript mimo prohlížeč – typicky na serveru. Je oblíbený pro tvorbu REST API, websocketových serverů a nástrojů příkazové řádky.
+# 8 - JavaScript – syntaxe, datové typy, funkce, promise
+JavaScript (JS) je skriptovací jazyk běžící v prohlížeči (a na serveru s Node.js), který umožňuje interaktivitu na webových stránkách. Je to jeden z hlavních pilířů moderního webu (spolu s HTML a CSS).
 
-ZÁKLADY NODE.JS
+SYNTAXE
 
-* Běží na serveru, nikoliv v prohlížeči
-* Asynchronní, událostmi řízený model (event loop)
-* Vysoký výkon, vhodné pro I/O operace
-* Modulární systém založený na CommonJS (`require`)
+* Nezávislá na platformě, dynamicky typovaný jazyk
+* Bloky kódu ohraničeny `{}`
+* Ukončení příkazů středníkem (není povinné, ale doporučené)
+* Velmi důležitá je práce s asynchronními funkcemi, volání API a manipulace s DOM
 
-VYTVOŘENÍ ZÁKLADNÍHO SERVERU
+Příklady syntaxe:
 
 ```javascript
-const http = require("http");
+let x = 10;
+const y = "Ahoj";
 
-const server = http.createServer((req, res) => {
-  res.writeHead(200, { "Content-Type": "text/plain" });
-  res.end("Ahoj ze serveru!");
-});
-
-server.listen(3000, () => {
-  console.log("Server běží na http://localhost:3000");
-});
+if (x > 5) {
+  console.log("x je větší než 5");
+}
 ```
 
-ZPRACOVÁNÍ CEST (ROUTOVÁNÍ)
-Základní směrování bez frameworku:
+DEKLARACE PROMĚNNÝCH
+
+* `var` – starší, má funkční rozsah
+* `let` – novější, blokový rozsah
+* `const` – neměnná hodnota, také blokový rozsah
+
+DATOVÉ TYPY
+
+1. Primitivní typy:
+
+* `string` – text: "Ahoj"
+* `number` – čísla: 42, 3.14
+* `boolean` – true/false
+* `undefined` – nezadaná hodnota
+* `null` – prázdná hodnota
+* `symbol`, `bigint` – speciální typy
+
+2. Složené typy:
+
+* `object` – složené struktury (např. `{ jmeno: "Jan" }`)
+* `array` – pole `[1, 2, 3]`
+* `function` – funkce jsou objekt
+
+FUNKCE
+Funkce jsou základní stavební kámen JS. Mohou být:
+
+* Deklarované:
 
 ```javascript
-const server = http.createServer((req, res) => {
-  if (req.url === "/") {
-    res.end("Hlavní stránka");
-  } else if (req.url === "/o-nas") {
-    res.end("O nás");
-  } else {
-    res.writeHead(404);
-    res.end("Stránka nenalezena");
+function pozdrav(jmeno) {
+  return "Ahoj " + jmeno;
+}
+```
+
+* Anonymní (např. v proměnné):
+
+```javascript
+const pozdrav = function(jmeno) {
+  return `Ahoj ${jmeno}`;
+};
+```
+
+* Arrow funkce:
+
+```javascript
+const pozdrav = (jmeno) => `Ahoj ${jmeno}`;
+```
+
+Funkce mohou přijímat parametry, vracet hodnoty, mít výchozí hodnoty a také být uvnitř jiných funkcí (closures).
+
+ROZSAH (SCOPE)
+
+* Globální: dostupný všude
+* Lokální: dostupný jen uvnitř funkce nebo bloku (`let`, `const`)
+
+HOISTING
+
+* Proměnné a funkce deklarované pomocí `var` nebo `function` jsou „vytahovány“ nahoru.
+
+ASYNCHRONNÍ PROGRAMOVÁNÍ
+JavaScript je jednovláknový, ale umí pracovat asynchronně (např. volání API, čekání na odezvu).
+
+PROMISE
+Promise je objekt, který reprezentuje budoucí výsledek asynchronní operace.
+
+Tři stavy:
+
+* pending – čekající
+* fulfilled – úspěšně splněno
+* rejected – odmítnuto (chyba)
+
+Příklad:
+
+```javascript
+let p = new Promise((resolve, reject) => {
+  setTimeout(() => resolve("Hotovo"), 1000);
+});
+
+p.then(data => console.log(data)).catch(err => console.error(err));
+```
+
+ASYNC / AWAIT
+Moderní způsob zápisu asynchronního kódu:
+
+```javascript
+async function nactiData() {
+  try {
+    let odpoved = await fetch("/api/data");
+    let data = await odpoved.json();
+    console.log(data);
+  } catch (chyba) {
+    console.error(chyba);
   }
-});
+}
 ```
-
-PRÁCE S CESTAMI
-Modul `path` umožňuje bezpečnou manipulaci s cestami:
-
-```javascript
-const path = require("path");
-
-let cesta = path.join(__dirname, "data", "soubor.txt");
-console.log(cesta);
-```
-
-PRÁCE SE SOUBORY
-Modul `fs` (filesystem):
-
-```javascript
-const fs = require("fs");
-
-fs.readFile("soubor.txt", "utf8", (err, data) => {
-  if (err) throw err;
-  console.log(data);
-});
-```
-
-POUŽITÍ EXPRESS.JS
-Populární framework, který zjednodušuje práci s routami:
-
-```javascript
-const express = require("express");
-const app = express();
-
-app.get("/", (req, res) => {
-  res.send("Domů");
-});
-
-app.get("/api/data", (req, res) => {
-  res.json({ jmeno: "Jan" });
-});
-
-app.listen(3000);
-```
-
-ZPRACOVÁNÍ TĚLA POŽADAVKU
-Pro práci s POST daty:
-
-```javascript
-app.use(express.json());
-
-app.post("/api", (req, res) => {
-  console.log(req.body);
-  res.send("Data přijata");
-});
-```
-
-DALŠÍ MODULY
-
-* `os` – informace o systému
-* `events` – práce s událostmi
-* `crypto` – hashování, šifrování
-
-NPM – Node Package Manager
-
-* Instalace balíčků: `npm install express`
-* `package.json` – popis projektu, závislosti
 
 ZÁVĚR
-Node.js je výkonný nástroj pro serverovou logiku v JavaScriptu. Je vhodný pro tvorbu moderních webových aplikací a API. Díky asynchronnímu modelu dobře zvládá velké množství současných požadavků.
+JavaScript je klíčový jazyk pro vývoj webových aplikací. Znalost jeho syntaxe, práce s funkcemi a porozumění asynchronnímu chování (promise, async/await) je nezbytná pro každého frontend i fullstack vývojáře.
